extends Control

# -------------------------------------------------------------------------
# Signals
# -------------------------------------------------------------------------
signal start_game()
signal options()

# -------------------------------------------------------------------------
# Variables
# -------------------------------------------------------------------------


# -------------------------------------------------------------------------
# Onready Variables
# -------------------------------------------------------------------------


# -------------------------------------------------------------------------
# Override Methods
# -------------------------------------------------------------------------


# -------------------------------------------------------------------------
# Private Methods
# -------------------------------------------------------------------------



# -------------------------------------------------------------------------
# Public Methods
# -------------------------------------------------------------------------


# -------------------------------------------------------------------------
# Handler Methods
# -------------------------------------------------------------------------
func _on_show_ui(ui_name : String) -> void:
	visible = ui_name == name


func _on_BTN_Start_pressed():
	emit_signal("start_game")


func _on_BTN_Options_pressed():
	emit_signal("options")


func _on_BTN_Quit_pressed():
	get_tree().quit()

